--- a/views/calculator.html
+++ b/views/calculator.html
@@ -7,4 +7,4 @@
     <!--RequireJs-->
     <script data-main="/scripts/calculator-main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.18/require.min.js"></script>
 #}}
-{{#def.include('./template/main')}}
+{{#def.include('./template/main_old')}}
