--- a/views/table_new.html
+++ b/views/table_new.html
@@ -11,4 +11,4 @@
     <!-- Detect the viewport size with css and javascript hack -->
     <div id="handheld-detection"></div>
 #}}
-{{#def.include('./template/main-game')}}
+{{#def.include('./template/game_new')}}
