--- a/views/template/main_old.html
+++ b/views/template/main_old.html
@@ -2,11 +2,11 @@
 
 <!DOCTYPE html>
 <html>
-    {{#def.include('head')}}
+    {{#def.include('head_old')}}
 <body>
 
 <div class="wrap">
-    {{#def.include('header')}}
+    {{#def.include('header_old')}}
 
     {{? it.warning }}
         <div class="warning">{{!it.warning}}</div>
