--- a/client_new/css/general.css
+++ b/client_new/css/general.css
@@ -1,18 +1,20 @@
+@import url("../vendor/font-awesome/css/font-awesome.css");
+@import url("../vendor/simplegrid/simplegrid.css");
+@import url("fonts.css");
+
 html, body {
     -webkit-font-smoothing: antialiased;
-    font: 14px "Verlag A", "Verlag B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #fff;
-    font-size: 20px;
+    font: 20px "Verlag A", "Verlag B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: black;
     font-weight: 300;
     line-height: 20px;
-    /*background-color: #21242a;*/
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    font-size: 20px;
 }
 
 body {
-    background: #21242a;
+    background: white;
 }
 
 a {
@@ -40,20 +42,20 @@ i {
 }
 
 ::-webkit-scrollbar-corner {
-     background-color: #1c1c1f;
+    background-color: white;
 }
 ::-webkit-scrollbar-track {
-     background-color: #181a1e;
+    background-color: white;
 }
 ::-webkit-scrollbar-thumb {
-     border: 1px solid #1c1c1f;
+    border: 1px solid #ddd;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-     background-color: #2a2c36;
+    background-color: #ddd;
 }
 ::-webkit-scrollbar {
     width: 10px;
-     background-color: #1c1c1f;
+    background-color: #ddd;
 }
 
 .strong {
@@ -76,18 +78,7 @@ i {
     }
 }
 
-.wrap {
-    width: 100%;
-    height: 100%;
-}
 
-.page-content {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-}
 
 .noselect {
     -webkit-touch-callout: none;
@@ -137,144 +128,6 @@ input:focus {
     .nav-top-bar .username a {
         font-weight: bold;
     }
-}
-
-
-/* ==========================================================================
-   Game container
-   ========================================================================== */
-
-#game-container {
-    width: 100%;
-    height: 100%;
-}
-
-/* Message bar */
-
-#game-message-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    /* line-height: 1.2rem; */
-    bottom: calc(100% - 1.2rem);
-    background-color: green;
-}
-
-#game-message-container.hide {
-    display: none;
-}
-
-#game-message-container>span {
-    overflow-y: hidden;
-
-}
-
-#game-message-container span>span, #game-message-container span>a {
-    color: white;
-    font-size: 0.8rem;
-    line-height: 1.2rem;
-}
-
-#game-message-container div{
-
-}
-
-/* Playable container (The game) */
-#game-playable-container {
-    position: absolute;
-    top: 2rem;
-    right: 0;
-    left: 0;
-    bottom: 0;
-}
-
-#game-playable-container.show-message {
-    top: 1.2rem;
-}
-
-#game-message-container .close-message{
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
-}
-
-#game-message-container .close-message i{
-    color: white;
-
-    font-size: 0.8rem;
-    line-height: 1.2rem;
-    padding-right: 0.2rem;
-}
-
-#game-message-container {
-    text-align: center;
-
-}
-
-#game-inner-container {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-#game-left-container {
-    display: table;
-    height: 100%;
-    width: 70%;
-    position: relative;
-}
-
-#game-left-container.small-window {
-    width: 100%;
-}
-
-#game-right-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 70%;
-    right: 0;
-    /* border-left: 1px solid #ddd; */
-    /* border-bottom: 1px solid #ddd; */
-    /* border-right: 1px solid #ddd; */
-    border: 1px solid #292d35;
-    margin: 5px;
-}
-
-
-/* ==========================================================================
-   Tabs container
-   ========================================================================== */
-
-#tabs-container {
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    display: table-row;
-}
-
-
-/* ==========================================================================
-   Chart-Controls container
-   ========================================================================== */
-
-#chart-controls-container {
-    border-left: 1px solid #ddd;
-    min-height: 400px;
-    display: table-row;
-    height: 50%;
-}
-
-#chart-controls-row, #tabs-controls-row {
-    display: table-row;
-
-}
-
-#chart-controls-col, #tabs-controls-col {
-    display: table-cell;
-    height: 50%;
-    position: relative;
 }
 
 
