--- a/client_new/css/tabs.css
+++ b/client_new/css/tabs.css
@@ -1,7 +1,3 @@
-/* ==========================================================================
-   Tabs
-   ========================================================================== */
-
 /* Container */
 
 #tabs-inner-container, #tabs-inner-container .log-chat-container {
@@ -10,11 +6,10 @@
     left: 5px;
     right: 5px;
     bottom: 5px;
-    border: 1px solid #292d35;
+    border: 1px solid #ddd;
 }
 
 /* Tabs */
-
 #tabs-inner-container .tab-container {
     position: absolute;
     top: 0;
@@ -23,26 +18,11 @@
     right: calc(100% - 2rem);
 }
 
-#tabs-inner-container .tab-container>div {
-     /* transform: rotate(270deg); */
-     /* position: absolute; */
-     /* left: 0; */
-     /* top: 0; */
-     /* width: 100%; */
-     /* height: 100%; */
-}
-
 #tabs-inner-container .tab-container ul {
     color: #32526E;
     font-size: 0.8rem;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 1.5rem;
     height: 100%;
-    display: table;      ;
-    /* height: 100%; */
-    /* display: table; */
     overflow: hidden;
     display: block;
     position: absolute;
@@ -56,13 +36,12 @@
     display: table-row;
     height: 50%;
     width: 1.5rem;
-    background: #292d35;
+    background: #ddd;
     cursor: pointer;
 }
 
 #tabs-inner-container .tab-container li.chat-log-tab:first-child {
     position: absolute;
-
     top: 0;
     right: 0;
     left: 0;
@@ -85,7 +64,7 @@
     white-space: nowrap;
     transform: rotate(270deg);
     max-width: 1.5rem;
-    color: #b0b3c1;
+    color: black;
     display: block;
     transform-origin: 50% 50%;
     position: absolute;
@@ -98,7 +77,7 @@
 }
 
 #tabs-inner-container .tab-container li.chat-log-tab.tab-active {
-    background-color: #181a1e;
+    background-color: white;
 
 }
 
@@ -111,26 +90,11 @@
     color: rgba(228, 121, 3, 1);
 }
 
-
-/*#tabs-inner-container .chat-log-tabs .chat-log-tab a {*/
-    /*color: black;*/
-    /*padding: 0 1em;*/
-/*}*/
-
-/*#tabs-inner-container .chat-log-tabs .tab-active a {*/
-    /*color: rgba(243,150,47,1);*/
-    /*font-weight: 800;*/
-/*}*/
-
 /* Widget */
-
 #tabs-inner-container .widget-container {
     position: absolute;
-
     top: 0;
     right: 0;
     left: 1.5rem;
     bottom: 0;
-    background-color: #181a1e;
-    /* overflow-y: scroll; */
 }
