--- a/client_new/css/topBar.css
+++ b/client_new/css/topBar.css
@@ -4,7 +4,9 @@
     right: 0;
     left: 0;
     height: 2rem;
-    background-color: #292d35;
+    background-color: white;
+    border-bottom: 1px solid #ddd;
+    font-family: "Verlag A", "Verlag B", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #top-bar .title {
@@ -22,6 +24,7 @@
 
 #top-bar .user-login {
     float: right;
+    line-height: 40px;
 }
 
 
@@ -74,6 +77,7 @@
 
 #top-bar .user-login .balance-bits span{
     line-height: 2rem;
+    color: black;
 }
 
 #top-bar .user-login .username {
