--- a/views/faq.html
+++ b/views/faq.html
@@ -285,4 +285,4 @@
     <a class="border-button red right" href="#">Up</a>
 </div>
 #}}
-{{#def.include('./template/main')}}
+{{#def.include('./template/main_old')}}
