--- a/views/template/head_old.html
+++ b/views/template/head_old.html
@@ -6,8 +6,8 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
     {{?it.table}}
-        <link rel="stylesheet" href="{{? it.buildConfig }} /old/css/{{=it.buildConfig['game-old.css']}} {{??}} /css/game.css {{?}}" />
+        <link rel="stylesheet" href="{{? it.buildConfig }} /old/css/{{=it.buildConfig['game-old.css']}} {{??}} /client_old/css/game.css {{?}}" />
     {{??}}
-        <link rel="stylesheet" href="{{? it.buildConfig }} /old/css/{{=it.buildConfig['app-old.css']}} {{??}} /css/app.css {{?}}" />
+        <link rel="stylesheet" href="{{? it.buildConfig }} /old/css/{{=it.buildConfig['app-old.css']}} {{??}} /client_old/css/app.css {{?}}" />
     {{?}}
 </head>
