Fix error page template routes

--- a/views/404.html
+++ b/views/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-{{#def.include('template/head')}}
+{{#def.include('template/head_old')}}
 <body>
     <div class="panel rounded not-found">
         <div class="row">
