Global exception handler, chat timestamp, recaptcha 2 in faucet Fix #185, fix #184, fix #181, fix #180

--- a/client_new/css/blackTheme.css
+++ b/client_new/css/blackTheme.css
@@ -116,6 +116,10 @@ body {
     color: white;
 }
 
+.time-stamp {
+    opacity: 0.6;
+}
+
 
 /* ==========================================================================
    tabs.css
