--- a/views/request.html
+++ b/views/request.html
@@ -1,6 +1,7 @@
 {{##def.page_title = 'Request Free Bits' #}}
 
 {{##def.content:
+<script src='https://www.google.com/recaptcha/api.js'></script>
 <div class="content row panel radius">
 
     <div class="settings">
@@ -31,35 +32,36 @@
                 {{?typeof it.user.eligible !== 'number'}}
                     <p class="small ">**Every hour you are able to request 2 free bits, just claim them!</p>
                     <form class="giveaway-form" action="/request" method="post">
-                        <script type="text/javascript">
-                            var RecaptchaOptions = {
-                                theme : 'white'
-                            };
-                        </script>
-                        <script type="text/javascript"
-                                src="https://www.google.com/recaptcha/api/challenge?k={{=it.recaptchaKey}}">
-                        </script>
-                        <noscript>
-                            <iframe src="https://www.google.com/recaptcha/api/noscript?k={{=it.recaptchaKey}}"
-                                    height="300" width="500" frameborder="0"></iframe><br>
-                            <textarea name="recaptcha_challenge_field" rows="3" cols="40">
-                            </textarea>
-                            <input type="hidden" name="recaptcha_response_field"
-                                   value="manual_challenge">
-                        </noscript>
+                        <!--<script type="text/javascript">-->
+                            <!--var RecaptchaOptions = {-->
+                                <!--theme : 'white'-->
+                            <!--};-->
+                        <!--</script>-->
+                        <!--<script type="text/javascript"-->
+                                <!--src="https://www.google.com/recaptcha/api/challenge?k={{=it.recaptchaKey}}">-->
+                        <!--</script>-->
+                        <!--<noscript>-->
+                            <!--<iframe src="https://www.google.com/recaptcha/api/noscript?k={{=it.recaptchaKey}}"-->
+                                    <!--height="300" width="500" frameborder="0"></iframe><br>-->
+                            <!--<textarea name="recaptcha_challenge_field" rows="3" cols="40">-->
+                            <!--</textarea>-->
+                            <!--<input type="hidden" name="recaptcha_response_field"-->
+                                   <!--value="manual_challenge">-->
+                        <!--</noscript>-->
+                        <div class="g-recaptcha" data-sitekey="{{=it.recaptchaKey}}"></div>
                         <input class="right border-button red" type="submit" value="request"/>
                     </form>
-                    <script type="text/javascript"
-                            src="https://www.google.com/recaptcha/api/challenge?k={{=it.recaptchaKey}}">
-                    </script>
-                    <noscript>
-                        <iframe src="https://www.google.com/recaptcha/api/noscript?k={{=it.recaptchaKey}}"
-                                height="300" width="500" frameborder="0"></iframe><br>
-                        <textarea name="recaptcha_challenge_field" rows="3" cols="40">
-                        </textarea>
-                        <input type="hidden" name="recaptcha_response_field"
-                               value="manual_challenge"/>
-                    </noscript>
+                    <!--<script type="text/javascript"-->
+                            <!--src="https://www.google.com/recaptcha/api/challenge?k={{=it.recaptchaKey}}">-->
+                    <!--</script>-->
+                    <!--<noscript>-->
+                        <!--<iframe src="https://www.google.com/recaptcha/api/noscript?k={{=it.recaptchaKey}}"-->
+                                <!--height="300" width="500" frameborder="0"></iframe><br>-->
+                        <!--<textarea name="recaptcha_challenge_field" rows="3" cols="40">-->
+                        <!--</textarea>-->
+                        <!--<input type="hidden" name="recaptcha_response_field"-->
+                               <!--value="manual_challenge"/>-->
+                    <!--</noscript>-->
                 {{??}}
                     <h4>You will be eligible for a free 2 bits in {{=it.user.eligible}} minutes</h4>
                 {{?}}
