Remove stars (performance) on black theme, add space between time and message for good coping, add collect your bits on index and on /play

--- a/client_new/css/app.css
+++ b/client_new/css/app.css
@@ -46,6 +46,21 @@ body {
 }
 
 
+/* Message wrappers
+   ========================================================================== */
+
+.success-wrap {
+    text-align: center;
+    line-height: 1.2rem;
+}
+
+.success-wrap a {
+    color: green;
+    font-weight: 600;
+    text-decoration: underline;
+}
+
+
 /* Index Styles
    ========================================================================== */
 
