--- a/views/template/main_new.html
+++ b/views/template/main_new.html
@@ -9,33 +9,33 @@
     {{#def.include('header_new')}}
 
     {{? it.warning }}
-    <div class="warning">{{!it.warning}}</div>
+    <div class="warning-wrap">{{!it.warning}}</div>
     {{?? it.success}}
-    <div class="success">{{!it.success}}</div>
+    <div class="success-wrap">{{!it.success}}</div>
     {{??it.user }}
 
     {{?it.user.error}}
 
-    <div class="warning">
+    <div class="warning-wrap">
         {{!it.user.error}}
     </div>
     {{??it.user.advice == 'new'}}
-    <div class="success">
+    <div class="success-wrap">
         Welcome to bustabit.com, to start you have 2 free bits, bits
         <a href="/request">you can request them here</a> or you can just watch the current games... have fun :D
 
     </div>
     {{??it.user.advice == 'received'}}
-    <div class="success">
+    <div class="success-wrap">
         Congratulations you have been credited 2 free bits. Have fun!
     </div>
     {{?? it.user.advice}}
-    <div class="success">
+    <div class="success-wrap">
         {{!it.user.advice}}
     </div>
     {{??it.user && it.user.balance_satoshis < 100 }}
     {{?it.user.eligible == true}}
-    <div class="success"><a href="/request">Collect your two free bits!</a></div>
+    <div class="success-wrap"><a href="/request">Collect your free bits!</a></div>
     {{?}}
     {{?}}
 
